<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.opengl.GLSurfaceView
        android:id="@+id/glSurfaceView_capture_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal">

        <View
            android:layout_width="960px"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:id="@+id/view_frame_capture_fragment"
            android:background="@drawable/frame_capture"/>

        <com.cvte.virtualbeauty.common.view.ExtRecyclerView
            android:id="@+id/recyclerView_render_scheme_capture_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|center_vertical"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capture_video"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capture_store"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|center_vertical"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capture_contrast"/>

        <Button
            android:id="@+id/button_share_capture_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/capture_share"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView_fps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:textColor="@android:color/white"/>

</android.support.design.widget.CoordinatorLayout>